--- a/style.css
+++ b/style.css
@@ -87,9 +87,7 @@ body .text-about {
   max-width: 230px;
   color: white;
   font-size: 1em;
-  padding: 10px;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
+  padding: 20px;
   transition: all 0.55s;
   cursor: pointer;
 }
@@ -204,6 +202,21 @@ body .mouse {
   transition: all 0.1s;
 }
 
+body .by {
+  background-color: black;
+  width: 400px;
+  top: 0;
+  right: 0;
+  position: absolute;
+  padding: 40px 20px;
+  text-align: end;
+  cursor: pointer;
+}
+body .by .school, .teacher, .students, .code {
+  margin-bottom: 10px;
+  color: white;
+}
+
 @keyframes anime {
   0% {
     margin-top: 900px;
@@ -215,6 +228,12 @@ body .mouse {
   }
 }
 
+@media screen and (max-width: 1190px) {
+  body .by {
+    width: 300px;
+    font-size: 0.9em;
+  }
+}
 @media screen and (max-width: 1000px) {
   body .content-quiz {
     width: 100%;
@@ -234,6 +253,12 @@ body .mouse {
     transition: all 0.55s;
   }
 }
+@media screen and (max-width: 840px) {
+  body .by {
+    width: 200px;
+    font-size: 0.8em;
+  }
+}
 @media screen and (max-width: 1080px) {
   body .h1-michael-jackson .michael, .jackson {
     font-size: 8em;
@@ -242,6 +267,34 @@ body .mouse {
     width: 150px;
     height: 150px;
     font-size: 1.29em;
+  }
+}
+@media screen and (max-width: 713px) {
+  body .by {
+    width: calc(100% - 40px);
+    font-size: 0.8em;
+    top: auto;
+    bottom: 0;
+    padding: 20px 20px;
+    word-wrap: break-word;
+  }
+
+  body .start-quiz {
+    width: 110px;
+    height: 110px;
+    font-size: 0.8em;
+    bottom: 190px;
+  }
+
+  body .text-about {
+    left: auto;
+    bottom: auto;
+    top: 65px;
+    right: -70px;
+    position: absolute;
+    transform: rotate(-90deg);
+    font-size: 0.80em;
+    width: 180px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -253,14 +306,8 @@ body .mouse {
   body .h1-michael-jackson .michael, .jackson {
     font-size: 5em;
   }
-  body .text-about {
-    bottom: auto;
-    top: 200px;
-    font-size: 0.85em;
-  }
   body .content-quiz h1, p {
     width: 100%;
-    text-align: center;
   }
   body .content-quiz .return {
     width: 90%;
@@ -268,17 +315,20 @@ body .mouse {
   body .mouse {
     display: none;
   }
+  body .text-about {
+    font-size: 0.7em;
+  }
 }
 @media screen and (max-width: 450px) {
   body .h1-michael-jackson .michael, .jackson {
     font-size: 4em;
   }
-  body .text-about {
+  /* body .text-about {
     bottom: auto;
     top: 70%;
     font-size: 0.80em;
     width: 200px;
-  }
+  } */
   body .start-quiz {
     width: 110px;
     height: 110px;
